--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,5 +1,6 @@
-port: 8080
+port: 80
 basepath: /operacoes
+mvURL: http://localhost:10010
 # swagger configuration file
 
 # values in the swagger hash are system configuration for swagger-node
