--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^1.2.0",
     "mocha": "^2.2.5",
     "nock": "^9.1.0",
+    "nodemon": "^1.12.1",
     "request": "^2.58.0",
     "should": "^7.1.0",
     "supertest": "^1.0.0",
